--- a/leeleeswreaths.html
+++ b/leeleeswreaths.html
@@ -35,6 +35,7 @@
         </nav>
     </div>
 
+<!-- MAIN -->
     <div class="container">
         <div class="jumbotron" id="home">
             <h1>Leelee's Wreaths & Decor</h1>
@@ -556,6 +557,8 @@
                 </div>
             </div>
 
+            <div id="like_button_container"></div>
+
             <!--     FOOTER     -->
             <footer class="container">
                 <p class="float-right">
@@ -573,21 +576,13 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 
-    <script>
-        $enable - shadows;
-        $('#order a').on('click', function(e) {
-            e.preventDefault();
-            $(this).tab('show');
-        })
 
-        function validateName() {
-            var x = document.forms["orderForm"]["fname"].value;
-            if (x == "") {
-                alert("Name must be filled out");
-                return false;
-            }
-        }
-    </script>
+    <!-- Note: when deploying, replace "development.js" with "production.min.js". -->
+  <script src="https://unpkg.com/react@16/umd/react.production.min.js" crossorigin></script>
+  <script src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js" crossorigin></script>
+
+  <!-- Load our React component. -->
+  <script src="like_button.js"></script>
 
 </body>
 
