--- a/leeleeswreaths.html
+++ b/leeleeswreaths.html
@@ -252,7 +252,7 @@
                                     <div class="carousel-item">
                                         <div class="col-12 col-md-6 mb-4 mx-auto">
                                             <div class="view rounded z-depth-1-half">
-                                                <img src="pics/fall3.jpg" class="img-fluid rounded" alt="fall theme">
+                                                <img src="pics/fall3.jpeg" class="img-fluid rounded" alt="fall theme">
                                             </div>
                                         </div>
                                     </div>
@@ -260,7 +260,7 @@
                                     <div class="carousel-item">
                                         <div class="col-12 col-md-6 mb-4 mx-auto">
                                             <div class="view rounded z-depth-1-half">
-                                                <img src="pics/fall4.jpg" class="img-fluid rounded" alt="fall theme with initial">
+                                                <img src="pics/fall4.jpeg" class="img-fluid rounded" alt="fall theme with initial">
                                             </div>
                                         </div>
                                     </div>
