--- a/leeleeswreaths.html
+++ b/leeleeswreaths.html
@@ -21,7 +21,6 @@
 
 <body>
     
-    <!-- NAVBAR -->
     <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container">
             <button class="navbar-toggler float-right" type="button" data-toggle="collapse" data-target="#navContent" aria-controls="navContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -44,7 +43,6 @@
         </div>
     </nav>
 
-<!-- MAIN -->
     <div class="container">
         <div class="container column text-center">
             <h1 class="secondary-color">Leelee's Wreaths & Decor</h1>
@@ -94,7 +92,6 @@
                                     <a class="btn-floating bg-transparent z-depth-0 m-0" href="#carousel-multi" data-slide="prev"><i class="dark-grey-text fa fa-arrow-circle-left"></i></a>
                                     <a class="btn-floating bg-transparent z-depth-0 m-0" href="#carousel-multi" data-slide="next"><i class="dark-grey-text fa fa-arrow-circle-right"></i></a>
                                 </div>
-
 
                                 <div class="carousel-inner" role="listbox">
                                     <div class="carousel-item active">
@@ -220,7 +217,7 @@
                                     <div class="carousel-item">
                                         <div class="col-12 col-md-6 mb-4 mx-auto">
                                             <div class="view rounded z-depth-1-half">
-                                                <img src="pics/halloween4.jpg" class="img-fluid rounded" alt="halloween ghosts">
+                                                <img src="pics/halloween4.jpeg" class="img-fluid rounded" alt="halloween ghosts">
                                             </div>
                                         </div>
                                     </div>
@@ -268,7 +265,7 @@
                                     <div class="carousel-item">
                                         <div class="col-12 col-md-6 mb-4 mx-auto">
                                             <div class="view rounded z-depth-1-half">
-                                                <img src="pics/fall5.jpg" class="img-fluid rounded" alt="blue and cream fall">
+                                                <img src="pics/fall5.jpeg" class="img-fluid rounded" alt="blue and cream fall">
                                             </div>
                                         </div>
                                     </div>
