--- a/leeleeswreaths.html
+++ b/leeleeswreaths.html
@@ -15,7 +15,9 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" integrity="sha384-XdYbMnZ/QjLh6iI4ogqCTaIjrFk87ip+ekIjefZch0Y+PvJ8CDYtEs1ipDmPorQ+" crossorigin="anonymous">
     <link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/sofia" type="text/css" />
     <link href="https://fonts.googleapis.com/css?family=Pompiere" rel="stylesheet" type="text/css">    <link rel='stylesheet' href='css/structure.css'>
-    <link rel='stylesheet' href='css/custom.css'>
+    <link rel="stylesheet" href="./styles/css/mdb.min.css" />
+
+    <link rel='stylesheet' href='./styles/css/gallery.css'>
 
 </head>
 
@@ -395,6 +397,9 @@
             </footer>
         </main>
     </div>
+
+    <script src="styles/index.js"></script>
+
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
@@ -402,8 +407,6 @@
   <script src="https://unpkg.com/react@16/umd/react.production.min.js" crossorigin></script>
   <script src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js" crossorigin></script>
 
-
-  <script src="like_button.js"></script>
 
   <script>
       $('.carousel.carousel-multi-item.v-2 .carousel-item').each(function() {
